--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -785,8 +785,11 @@ progress {
 }
 
 .img-fluid {
-  max-width: 100%;
-  height: auto;
+  /* max-width: 100%;
+  height: auto; */
+  height: 75px;
+  width: 75px;
+  /* object-fit: cover; */
 }
 
 .img-thumbnail {
@@ -19169,6 +19172,18 @@ strong {
 .img-radius {
   border-radius: 50%;
 }
+.fixed-img {
+  width: 40px;            /* Set your desired width */
+  height: 40px;           /* Set your desired height */
+  object-fit: fill;       /* Crops and fits the image inside the box */
+  border-radius: 50%;      /* Makes it circular (if needed) */
+}
+.fixed-imgg {
+  width: 6em;            /* Set your desired width */
+  height: 5em;           /* Set your desired height */
+  object-fit: fill;       /* Crops and fits the image inside the box */
+  border-radius: 50%;      /* Makes it circular (if needed) */
+}
 
 .pc-icon:not([class*=wid-]) {
   width: 22px;
@@ -26308,6 +26323,7 @@ select[data-multiselectsplitter-secondselect-selector].dataTable-input {
   flex-direction: column;
   opacity: 0;
   transition: all 0.2s ease-in-out;
+  object-fit: cover;
 }
 .user-upload:hover .img-avtar-upload {
   opacity: 1;
